k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dx03-ENVIRONMENT_PLACEHOLDER
  labels:
    name: dx03-ENVIRONMENT_PLACEHOLDER
    app: dx03
